--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -2,7 +2,7 @@
   <head>
     <link
       rel="icon"
-      href="https://raw.githubusercontent.com/elmarcz/Google/master/src/public/img/favicon.ico"
+      href="https://raw.githubusercontent.com/elmarcz/Google/master/src/public/img/icons/favicon-round.ico"
     />
 
     <meta charset="UTF-8" />
@@ -40,6 +40,7 @@
 
     <!----===== CSS ===== -->
     <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/google.css" />
 
     <!----===== Boxicons CSS ===== -->
     <link
